Correcciones de heroku